--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,4 +44,4 @@ jobs:
             linux/amd64
             linux/arm64
           push: true
-          tags: ${{ github.event.inputs.docker_username }}/openvpn-tunnel:latest
+          tags: ${{ github.event.inputs.docker_username }}/openvpn:latest
